--- a/index.html
+++ b/index.html
@@ -7,7 +7,5 @@
   </head>
   <body></body>
 
-  <script src="task-1.js"></script>
-  <script src="task-2.js"></script>
-  <script src="task-3.js"></script>
+  <script type="module" src="./main.js"></script>
 </html>
